fixed alignment on Next gen text

--- a/styles.scss
+++ b/styles.scss
@@ -313,14 +313,17 @@ footer {
         }
     }
     #next-gen {
-        grid-column: 1/2;
+        grid-column: 1/3;
         grid-row: 1/2;
         text-align: left;
         margin-block: 5rem;
         .wrapper {
-            max-width: 450px;
             h1 {
                 font-size: 3rem;
+            }
+            h1,
+            p {
+                max-width: 450px;
             }
         }
     }
